--- a/PrediksiCuaca/nbproject/project.properties
+++ b/PrediksiCuaca/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Com.PrediksiCUaca.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.ojdbc6.jar=D:\\OJDBC-Full\\ojdbc6.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.ojdbc6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
